<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etSalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_salario"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <RadioGroup
        android:id="@+id/rgAumento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/rb40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aumento_40" />

        <RadioButton
            android:id="@+id/rb45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aumento_45" />

        <RadioButton
            android:id="@+id/rb50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aumento_50" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_marginTop="20dp" />
    <Button
    android:id="@+id/btnLimpar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/limpar"
    android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="18sp"
        android:layout_marginTop="20dp" />
</LinearLayout>